@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 07-03-2006 added: sync message to avoid stalling dvdplayer thread when trying to sync audio/video on discontinuities
  - 07-03-2006 changed: disabled sort order button for bookmarks in music nav
  - 07-03-2006 fixed: if the last focused control of a control group is disabled, no other control will get the focus
  - 07-03-2006 fixed: party mode table is missing when a new musicdatabase is created
